--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,6 +76,7 @@ main {
     border-radius: 0.25rem;
     font-size: 1rem;
     background-color: var(--paper-color);;
+    color: var(--font-color);;
 }
 
 .search-input {
